[project]
name = "cartoonizer"
version = "0.1.0"
description = "A project to cartoonize images."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    {email = "you@example.com"},
    {name = "Your Name"},
]
dependencies = [
    "transformers==4.52.4",
    "diffusers==0.33.1",
    "peft==0.15.2",
    "opencv-python-headless==4.11.0.86",
    "typing-extensions==4.14.0",
    "protobuf==5.29.4",
    "sentencepiece==0.2.0",
    "jupyter==1.1.1",
    "torchao==0.11.0",
    "torch==2.0.1",
    "boto3==1.38.37",
    "requests==2.32.4",
    "tqdm==4.67.1",
    "jmespath==1.0.1",
    "python-dateutil==2.9.0.post0",
    "types-python-dateutil==2.9.0.20250516",
    "pyyaml==6.0.2",
    "packaging==25.0",
    "huggingface-hub==0.33.0",
    "numpy==2.3.0",
    "pillow==11.2.1",
    "regex==2024.11.6",
    "safetensors==0.5.3",
    "tokenizers==0.21.1",
    "accelerate==1.7.0",
    "botocore==1.38.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"